behold, a default layout!

--- a/app/views/index/index.haml
+++ b/app/views/index/index.haml
@@ -1,14 +1,1 @@
-
-%html
-	%head
-		%title Best of!
-	%body
-
-		%div{"data-role" => "navbar"}
-		  %ul
-		    %li
-		      %a.ui-btn-active{:href => "a.html"} One
-		    %li
-		      %a{:href => "b.html"} Two
-		/ /navbar
-
+= render :partial => "layouts/lorem"
