starting on the new dish screen with fancy place search

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,1 +1,6 @@
+- @header_title = "BestOf :: Home"
+- content_for :header_buttons do
+  %a.ui-btn-right{ :href => "/rankings/add", "data-role" => "button", "data-icon" => "add", "data-iconpos" => "right" }
+    Add
+
 = render :partial => "layouts/lorem"
