--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,8 @@
     %title Disrupt
 
     = stylesheet_link_tag 'jquery.mobile-1.0a4.1', 'bestof'
-    = javascript_include_tag 'application', 'jquery-1.5.1.js', 'jquery.mobile-1.0a4.1'
+    = javascript_include_tag 'jquery-1.5.1.js', 'jquery.mobile-1.0a4.1', 'typewatch-2.0'
+    = javascript_include_tag 'application'
     = csrf_meta_tag
 
   %body
@@ -13,7 +14,8 @@
 
       %div{"data-role" => "header"}
         %h1.header-title
-          Best Of!
+          = @header_title || "Best Of!"
+        = yield :header_buttons
 
       %div{"data-role" => "content"}
         = yield
