--- a/public/stylesheets/bestof.css
+++ b/public/stylesheets/bestof.css
@@ -14,6 +14,9 @@
 .ui-icon-places  { background:  url(/images/icons/places.png)   50% 50% no-repeat; }
 .ui-icon-me      { background:  url(/images/icons/me.png)       50% 50% no-repeat; }
 
+div.spacer {
+	padding-top: 15px;
+}
 
 
 /* place search */
