save lat/lng in session for 4sq support

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
     %title Disrupt
 
     = stylesheet_link_tag 'jquery.mobile-1.0a4.1', 'bestof'
-    = javascript_include_tag 'jquery-1.5.1.js', 'jquery.mobile-1.0a4.1', 'typewatch-2.0'
+    = javascript_include_tag 'jquery-1.5.1.js', 'jquery.mobile-1.0a4.1', 'typewatch-2.0', 'geo'
     = javascript_include_tag 'application'
     = csrf_meta_tag
 
