simple friend/user pages

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -6,14 +6,14 @@
 %div#fb-root
 
 %div.welcome
-  %img{ :src => @user.facebook_photo }
+  %img{ :src => @current_user.facebook_photo }
   %h2
     Welcome
-    = @user.name
+    = @current_user.name
 
 %h2 Your Recent Activity
 %ul
-  - @user.rankings.recent.each do |rank|
+  - @current_user.rankings.recent.each do |rank|
     %li
       = rank.venue.name
       = "##{rank.position}"
@@ -21,13 +21,14 @@
       = "[#{rank.dish.name}]"
 
 %h2 Your Friends Recent Activity
-%ul
-  - @user.friends.each do |friend|
-    %div.friend
-      %img{ :src => friend.facebook_photo, :width => 20, :height => 20 }
-      %h3
+- @current_user.friends.each do |friend|
+  %div.friend
+    %img{ :src => friend.facebook_photo, :width => 20, :height => 20 }
+    %h3
+      %a{:href => "/users/#{friend.id}" }
         = friend.name
 
+    %ul
       - friend.rankings.recent.each do |rank|
         %li
           = rank.venue.name
