--- a/public/stylesheets/bestof.css
+++ b/public/stylesheets/bestof.css
@@ -18,6 +18,7 @@ div.spacer {
 	padding-top: 15px;
 }
 
+div.friend h2 { display: inline; }
 div.friend h3 { display: inline; }
 
 div.welcome img { float: right; }
@@ -32,3 +33,8 @@ div.ui-slider { float: right; }
 /* place search */
 #places { display: none; }
 .ui-select { display: none !important; }
+
+
+/* users page */
+
+ul.dish li.dish { list-style-type: none; }
