fixed ajax search

--- a/app/views/rankings/add.haml
+++ b/app/views/rankings/add.haml
@@ -2,7 +2,8 @@
 - content_for :header_buttons do
   %a.ui-btn-right.save_ranking{ :href => "#", "data-role" => "button", "data-icon" => "save", "data-iconpos" => "right" }
     Save
-
+    
+%div#add_ranking_page
 
 %form{ :method => "post", :action => "/rankings/save" }
 
